--- a/.openapi-generator-ignore
+++ b/.openapi-generator-ignore
@@ -21,3 +21,8 @@
 #docs/*.md
 # Then explicitly reverse the ignore rule for a single file:
 #!docs/README.md
+
+model_cmk_v2_cluster_spec.go
+model_cmk_v2_cluster_spec_update.go
+api_o_auth_tokens_sts_v1.go
+model_notifications_v1_integration_target.go
